feat: jalon 2-E, human-in-the-loop
